2002-03-05  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* ../configure.in: make sure to include the posix package only for
	GHC (and not for nhc98)

	* admin/BaseVersion.hs (versnum): 0.23.1

2002-02-11  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* Makefile: we are now creating a library archive to use packages

2002-02-10  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* ../mk/common.mk: added package support

	* ../configure.in: added package support; replaced -syslib by -package

	* admin/BaseVersion.hs (versnum): 0.23.0

2002-01-06  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* common.mk: removed TMP as it causes problems on cygwin as
	reported by Karl M. Syring <syring@web.de>

	* admin/BaseVersion.hs (versnum): 0.22.5

2001-09-26  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* general/UNames.hs: nhc98 1.08 doesn't grok deriving Ix

	* ../configure.in: better support for nhc98 

	* admin/BaseVersion.hs (versnum): 0.22.4

2001-05-20  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* state/CIO.hs (doesFileExistCIO): added by Axel Simon <simona_@web.de>

2001-05-13  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* Makefile (spotless): remove config.cache

2001-04-21  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* ../configure.in: Adapted to support ghc 5.x and removed support
	for ghc 3.x

	* admin/BaseVersion.hs (versnum): 0.22.3

2000-10-05  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* ../configure.in: uses the fptools macro for determining ghc's
	version number

2000-10-02  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* errors/Errors.hs (showError): special handling of internal positions

	* admin/Common.hs: added internal positions

	* admin/BaseVersion.hs (versnum): 0.22.2

2000-09-15  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* ../configure.in: corrected ghc version number extraction to
	correctly handle patch levels; added happy - most have gone lost
	earlier...
